@@ -1334,7 +1334,7 @@ test(461, DT[,sum(v),by=a], data.table(a=1:3,V1=c(11L,13L,15L),key="a"))
 f = tempfile()
 save(list="DT",file=f)
 load(f)
-test(462, suppressWarnings(DT[,foo:=10L]), data.table(a=1:3,v=4:9,foo=10L,key="a"))
+test(462, DT[,foo:=10L], data.table(a=1:3,v=4:9,foo=10L,key="a"))
 unlink(f)
 
 # Test CJ problems with v1.7.4, #1689
